--- a/.github/workflows/Docker-workflow.yml
+++ b/.github/workflows/Docker-workflow.yml
@@ -26,8 +26,11 @@ jobs:
 
             - name: Long tests
               run: mvn -ntp test -Dtest='CalculatorTestThorough'
-
+            
             - name: Package
+              run: mvn -ntp package
+
+            - name: Log in to Docker hub
               uses: docker/login-action@@f054a8b539a109f9f41c372932f1ae047eff08c9
               with:
                 username: ${{ secrets.DOCKER_USERNAME}}
